--- a/README
+++ b/README
@@ -1,1 +1,30 @@
-Nothing here
+编译原理课程设计说明
+队伍介绍：
+
+队名：丁伟孔捷李云龙
+
+队长：陈雨晗-20183040-计科1803
+
+队员1：陈奕宁-20183495-计科1803
+
+队员2：罗康-20183636-计科1803
+
+项目说明：
+
+1、项目仓库由团队三人共同维护
+
+2、master文件夹下分为课程代码和课程报告两个模块，课程报告
+
+3、三个人各自的分支用来存放各自的代码更新和报告更新
+
+4、项目规范：为了统一管理，统一编译器（自7.2开始），以便出现其他错误
+
+5、实现：基于C语言的部分功能的编译器前端和后端的设计
+
+进度：
+
+截止6.29：统一了文法，进行了词法分析器扫描器的设计和编写，符号表部分功能的设计，算术表达式文法的设计和错误分析，设计词法分析所需要的数据结构，并且进行词法分析等。
+
+截止7.1：完善了文法，对文法中出现了同一个产生式左部而右部的select集出现了相交的情况进行处理，使之成为更完善的LL(1)文法，完成算术表达式文法的翻译文法设计和语义动作实现，语义分析入口函数的代码实现，词法分析扫描器的全部实现工作，完成符号表中表项的添加，检查等功能，通过动态链表储存信息，设计并提供对应各种数据类型的函数接口以及返回值等。
+
+截止7.2：完善了文法的语义动作，对语义分析入口函数进行完善，设计和编写了语义分析的子函数，比如复合语句部分的设计和实现，完成了统一编译器之后对词法分析扫描器的调试工作，符号表：确定接口参数与返回值，进行基本功能测试与模块整体功能测试。用递归下降子程序法基本完成了语法分析的部分，并且进行了基本的调试工作等。Nothing here
