--- a/README
+++ b/README
@@ -27,4 +27,4 @@
 
 截止7.1：完善了文法，对文法中出现了同一个产生式左部而右部的select集出现了相交的情况进行处理，使之成为更完善的LL(1)文法，完成算术表达式文法的翻译文法设计和语义动作实现，语义分析入口函数的代码实现，词法分析扫描器的全部实现工作，完成符号表中表项的添加，检查等功能，通过动态链表储存信息，设计并提供对应各种数据类型的函数接口以及返回值等。
 
-截止7.2：完善了文法的语义动作，对语义分析入口函数进行完善，设计和编写了语义分析的子函数，比如复合语句部分的设计和实现，完成了统一编译器之后对词法分析扫描器的调试工作，符号表：确定接口参数与返回值，进行基本功能测试与模块整体功能测试。用递归下降子程序法基本完成了语法分析的部分，并且进行了基本的调试工作等。Nothing here
+截止7.2：完善了文法的语义动作，对语义分析入口函数进行完善，设计和编写了语义分析的子函数，比如复合语句部分的设计和实现，完成了统一编译器之后对词法分析扫描器的调试工作，符号表：确定接口参数与返回值，进行基本功能测试与模块整体功能测试。用递归下降子程序法基本完成了语法分析的部分，并且进行了基本的调试工作等。
