--- a/计算机1803-罗康-第一次阶段性报告.md
+++ b/计算机1803-罗康-第一次阶段性报告.md
@@ -1,6 +1,6 @@
 # 第一次阶段性报告
 ## 1.扫描器的功能设计
-我们组将词法分析与符号表分开组织，词法分析器只负责每次返回TOKEN供语义和语法分析时扫描单词时使用，而符号表在语义分析时进行填写。扫描器的设计如下：
+我们组将词法分析与符号表分开组织，词法分析器只负责每次返回TOKEN供语义和语法分析时扫描单词时使用，而符号表在语义分析时进行填写。对于常数处理，构造了常数处理机去处理常数，为了简化代码，我将常数处理机作为了词法分析类的一个成员函数，使用了自动机状态转移的方式，并且在进入不同状态的时候插入语义动作达到了处理常数的效果，词法分析器的结构如下：
 
       class Token
     {
