--- a/README
+++ b/README
@@ -21,10 +21,9 @@
 
 5、实现：基于C语言的部分功能的编译器前端和后端的设计
 
-进度：
-
-截止6.29：统一了文法，进行了词法分析器扫描器的设计和编写，符号表部分功能的设计，算术表达式文法的设计和错误分析，设计词法分析所需要的数据结构，并且进行词法分析等。
-
-截止7.1：完善了文法，对文法中出现了同一个产生式左部而右部的select集出现了相交的情况进行处理，使之成为更完善的LL(1)文法，完成算术表达式文法的翻译文法设计和语义动作实现，语义分析入口函数的代码实现，词法分析扫描器的全部实现工作，完成符号表中表项的添加，检查等功能，通过动态链表储存信息，设计并提供对应各种数据类型的函数接口以及返回值等。
-
-截止7.2：完善了文法的语义动作，对语义分析入口函数进行完善，设计和编写了语义分析的子函数，比如复合语句部分的设计和实现，完成了统一编译器之后对词法分析扫描器的调试工作，符号表：确定接口参数与返回值，进行基本功能测试与模块整体功能测试。用递归下降子程序法基本完成了语法分析的部分，并且进行了基本的调试工作等。
+完成内容：
+1、词法分析部分：包含常数处理机，和多种关键字，标识符，界符等等，实现较全的扫描识别并输出。
+2、语义分析部分：实现包含算术表达式文法，表达式文法，函数声明，函数调用，for语句文法，while语句文法，if和else语句文法，并支持函数嵌套，if for while嵌套等。同时可以进行错误分析，并抛出异常。
+同时可以根据翻译文法进行语义动作，并进行中间代码生成。
+3、dag优化：可以对语义分析的输出中间代码进行正确优化，输出优化后的中间代码。
+4、汇编代码生成：支持声明，赋值，函数调用，声明，函数嵌套，for语句 while语句，if语句的嵌套使用，算术表达式文法以及表达式文法的目标代码生成，同时可以执行汇编指令，运行并输出正确结果。
